# blux-guard

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  AUDIT_SCHEMA.md  CHANGELOG.md  COCKPIT_SPEC.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE  OPERATIONS.md  PRIVACY.md  README.md  ROADMAP.md  ROLE.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  blux_shell.py  initiate_cockpit.py  pyproject.toml  requirements.txt  snapshot.md
.config/blux_guard/: motd_dynamic.py  motd_header.txt  show_motd.sh
.config/rules/: __init__.py  index.yar  rules.json
.github/workflows/: ci.yml  lint-docs.yml  physics-tests.yml  schema-validate.yml  security.yml
blux_cli/: __init__.py  blux.py  security_integration.py
blux_cli/widgets/: __init__.py  anti_tamper_controls.py  blux_cockpit.css  cockpit_header_footer.py  decisions_view.py  dev_menu_tree.py  logs_view.py  network_monitor.py  node_data.json  process_monitor.py  scripts_view.py  sensors_dashboard.py  tree.py
blux_guard/: __init__.py  audit.py  doctor.py  quantum_plugin.py
blux_guard/agents/: __init__.py  common.py  linux_agent.py  mac_agent.py  termux_agent.py  windows_agent.py
blux_guard/api/: __init__.py  guardd.py  server.py  stream.py
blux_guard/cli/: README.md  __init__.py  blux_guard.py  bluxq.py
blux_guard/config/: __init__.py  default.yaml  local.yaml
blux_guard/contracts/: __init__.py
blux_guard/core/: __init__.py  devsuite.py  doctrine_integration.py  engine.py  receipt.py  runtime.py  sandbox.py  security_cockpit.py  selfcheck.py  telemetry.md  telemetry.py
blux_guard/integrations/: __init__.py  doctrine.py  reg.py
blux_guard/tui/: README.md  __init__.py  app.py  audit_integrity_panel.py  audit_panel.py  bq_panel.py  cockpit.css  credentials_panel.py  dashboard.py  metrics_panel.py  process_panel.py  shell_panel.py  yara_panel.py
blux_guard_shell/: __init__.py  shell_menu.py
blux_modules/: __init__.py
blux_modules/security/: anti_tamper_engine.py  auth_system.py  (+5 more)
docs/: ROLE.md
examples/: config.sample.yaml  doctrine.sample.md  guard_receipt.example.json
scripts/: __init__.py  audit_scripts.py  auth_reset.py  check_root.sh  check_status.sh  clean_temp.sh  create_venv.sh  daily_report.sh  debug_env.sh  fix_perms.sh  gen_filetree.py  initiate_cockpit.sh  inspect_modules.py  install_linux.sh  install_termux.sh  install_windows.ps1  perms_manifest.txt  physics_check.sh  physics_guard.py  physics_no_root.py  reload_config.sh  restart.sh  root_workaround.sh  rotate_logs.sh  run_guard.sh  schedule_checks.sh  set_user_pin.sh  setup_env.sh  setup_security.py  unlock_system.sh  update_modules.sh  update_readme_filetree.py
tests/: test_cli.py  test_receipt.py
(+34 files in other folders)
