[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blux-guard"
version = "1.0.0"
description = "Terminal TUI Dev Security / BLUX Ecosystem Cockpit"
readme = "README.md"
authors = [{ name = "Outer Void Team" }]
license = { text = "Apache 2.0 License" }
dependencies = [
    "argon2-cffi",
    "cryptography",
    "textual",
    "textual-dev",
    "rich",
    "pysqlite3",
    "fastapi",
    "uvicorn"
]

[project.scripts]
bluxq = "blux_guard.cli.bluxq:app"
bluxqd = "blux_guard.api.guardd:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["blux_modules*", "blux_guard*"]  # Include legacy and new developer suite modules

[tool.setuptools.package-data]
blux_modules = ["*"]
