[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blux-guard"
version = "1.0.0"
description = "Mechanical guard receipt emission for BLUX"
readme = "README.md"
authors = [{ name = "Outer Void Team" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["security", "blux", "guard", "receipt", "mechanical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = ["jsonschema>=4.23.0"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]
[tool.setuptools]
license-files = [
    "LICENSE",
    "LICENSE-APACHE",
    "LICENSE-COMMERCIAL",
    "NOTICE",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blux_guard*"]
